# numba_scipy

./: .gitignore  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: dependabot_helper.yml  deploy_release.yml  test_and_deploy.yml
buildscripts/conda_recipes/numba-scipy/: meta.yaml
buildscripts/incremental/: setup_conda_environment.sh
docs/: environment.yml
docs/source/: conf.py
numba_scipy/: __init__.py  sparse.py
numba_scipy/special/: overloads.py  signatures.py
numba_scipy/tests/: test_sparse.py  test_special.py
scripts/: generate_special_function_declarations.py
