[project]
name = "numba-scipy"
authors = [{ name = "Anaconda, Inc.", email = "numba-users@continuum.io" }]
description = "numba-scipy extends Numba to make it aware of SciPy"
dynamic = ['version']
readme = "README.rst"
license = "BSD-2-Clause"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
]

dependencies = ["scipy>=0.16", "numba>=0.45"]

[project.optional-dependencies]
dev = ["pytest", "sphinx"]

[project.urls]
Source        = "https://github.com/numba/numba-scipy"

[project.entry-points.numba_extensions]
init = "numba_scipy:_init_extension"
